plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(20)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    // Spring for Apache Kafka (producer/consumer abstraction)
    implementation 'org.springframework.kafka:spring-kafka'

    // Cập nhật JJWT lên phiên bản mới nhất (Java JWT)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.0' 
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'

    // Cập nhật SpringDoc OpenAPI lên phiên bản mới nhất
    // http://localhost:8080/swagger-ui.html
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

    // Data redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Cập nhật Commons Lang3 lên phiên bản mới nhất
    implementation 'org.apache.commons:commons-lang3:3.14.0'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
